--- a/m.conf
+++ b/m.conf
@@ -1,18 +1,34 @@
-[规则]
+[General]
+bypass-system = true #跳过系统代理
+skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com #不使用代理的地址
+tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32 #不使用虚拟网卡的地址
+dns-server = 8.8.8.8, 114.114.114.114 #DNS服务器
+ipv6 = false #不使用IPv6
+prefer-ipv6 = false #不优先使用IPv6
+dns-fallback-system = false #不使用系统DNS
+dns-direct-system = false #不直连系统DNS
+icmp-auto-reply = true #自动回复ICMP
+always-reject-url-rewrite = false #总是拒绝URL重写
+private-ip-answer = true #私有IP回答
+dns-direct-fallback-proxy = true #DNS直连失败时使用代理
 
-# 中国网站和局域网直连
-DOMAIN-SUFFIX,cn,DIRECT
-DOMAIN-SUFFIX,local,DIRECT
+[Proxy Group]
+PROXY = url-test,url=http://www.google.com/,interval=600,timeout=5,select=0,policy-regex-filter=$ #代理组，使用url-test策略，测试URL为http://www.google.com/，测试间隔为600秒，超时为5秒，选择第0个代理，过滤策略为$
 
-# auth0.com、recaptcha.net、gvt2.com、gvt1.com、gvt3.com 用 Oracle2 节点代理
-DOMAIN-SUFFIX,auth0.com,PROXY,oracle2
-DOMAIN-SUFFIX,recaptcha.net,PROXY,oracle2
-DOMAIN-SUFFIX,gvt2.com,PROXY,oracle2
-DOMAIN-SUFFIX,gvt1.com,PROXY,oracle2
-DOMAIN-SUFFIX,gvt3.com,PROXY,oracle2
+[Rule]
+# LAN
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,DIRECT #使用本地网络规则集，直连
+# Rule
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list,REJECT #使用广告屏蔽规则集，拒绝
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list,PROXY #使用代理规则集，使用代理
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,DIRECT #使用中国域名规则集，直连
+# China
+GEOIP,CN,DIRECT #使用地理位置规则，中国IP直连
+# Final
+FINAL,PROXY #使用最终规则，使用代理
 
-# 美国网站用 BWG_vless 节点代理
-DOMAIN-SUFFIX,us,PROXY,BWG_vless
+[Host]
+localhost = 127.0.0.1 #主机名映射
 
-# 其他网站用默认节点代理
-DOMAIN-SUFFIX,*,PROXY
+[MITM]
+enable = true #启用中间人攻击
