--- a/m.conf
+++ b/m.conf
@@ -2,7 +2,10 @@
 https://raw.githubusercontent.com/GMOogway/shadowrocket-rules/master/Shadowrocket.conf
 DOMAIN-KEYWORD,google,Proxy
 DOMAIN-KEYWORD,bing,Proxy
-DOMAIN-SUFFIX,openai.com,Oracle2
-DOMAIN-SUFFIX,chatgpt.com,Oracle2
+DOMAIN-KEYWORD,openai,Oracle2
+DOMAIN-KEYWORD,chatgpt,Oracle2
 GEOIP,CN,DIRECT
 URL-REGEX,https://raw.githubusercontent.com/zhouzhouprogram/Shadowrocket-ADBlock-Rules/master/sr_adb.conf,REJECT
+[Rule]
+USER-AGENT,Googlebot*,Proxy
+USER-AGENT,Bingbot*,Proxy
